@@ -11,7 +11,11 @@ set -u
 
 # We make use of the functions provided by eix-functions.sh:
 
-. ./eix-functions.sh.in
+if eix_funcs=`./eix-functions.sh.in 2>/dev/null`
+then	eval "$eix_funcs"
+else	echo "${0##*/}: cannot find eix-functions.sh" >&2
+	exit 1
+fi
 ReadFunctions
 
 # Prepend content of eix variable EIX_INSTALLED_AFTER to the arguments
