@@ -12,7 +12,11 @@ set -u
 
 time_begin=`date '+%s' 2>/dev/null` || time_begin=
 
-. ./eix-functions.sh.in
+if eix_funcs=`./eix-functions.sh.in 2>/dev/null`
+then	eval "$eix_funcs"
+else	echo "${0##*/}: cannot find eix-functions.sh" >&2
+	exit 1
+fi
 ReadFunctions
 
 ReadVar local_varcache EPREFIX_PORTAGE_CACHE
